# darkmod

./: README.md  gradle.properties  gradlew  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  constant.h  hack-thread.h  main.cpp  register.h  utilities.h
app/src/main/cpp/Dobby/include/: dobby.h
app/src/main/cpp/Games/: dream-day-house.h  station-manager.h
app/src/main/cpp/Includes/: Utils.h
app/src/main/cpp/Patching/: Patch.cpp
app/src/main/java/gg/day/dark/: ChangeCallback.java  MainActivity.java  ModMenu.java  ModService.java  ModUtilities.java  Properties.java  Start.java  Utilities.java
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
gradle/wrapper/: gradle-wrapper.properties
